<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>conquer.plugins</groupId>
	<artifactId>store</artifactId>
	<version>0.0-alpha</version>
	<name>example</name>
	<url>https://github.com/JCWasmx86/Conquer/Conquer_Store</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.16</maven.compiler.source>
		<maven.compiler.target>1.16</maven.compiler.target>
	</properties>
	<pluginRepositories>
		<pluginRepository>
			<id>apache.snapshots</id>
			<url>https://repository.apache.org/snapshots/</url>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>Conquer repo</id>
			<url>https://raw.githubusercontent.com/JCWasmx86/JCWasmx86.github.io/master/mvn</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>conquer</groupId>
			<artifactId>conquer</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>conquer</groupId>
			<artifactId>conquer_spi</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>16</release>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>--enable-preview</argLine>
					<trimStackTrace>false</trimStackTrace>
					<systemPropertyVariables>
						<conquer.appdata.default>test_dir</conquer.appdata.default>
						<user.home>test_dir</user.home>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Built-By></Built-By>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0-SNAPSHOT</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>false</minimizeJar>
							<relocations>
								<relocation>
									<pattern>com.google.gson</pattern>
									<shadedPattern>jcwasmx86.store.gson</shadedPattern>
								</relocation>
							</relocations>
							<filters>
								<filter>
									<artifact>com.google.code.gson:gson</artifact>
									<includes>
										<include>com/google/gson/**</include>
									</includes>
								</filter>
								<filter>
									<artifact>conquer:*</artifact>
									<excludes>
										<exclude>conquer/**</exclude>
										<exclude>META-INF/**</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>

